--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: performing rake tasks (with direnv)
   command: >
-    direnv invoke . bundle exec rake {{ item }}
+    direnv exec . bundle exec rake {{ item }}
     chdir={{ deploy_release_dir }}
   with_items: deploy_rake_tasks
   when: deploy_with_environment is defined
