--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,12 +3,12 @@
   command: >
     direnv exec . bundle exec {{ deploy_rake_tasks_command }} {{ item }}
     chdir={{ deploy_release_dir }}
-  with_items: deploy_rake_tasks
+  with_items: "{{ deploy_rake_tasks }}"
   when: deploy_with_environment is defined
 
 - name: performing rake tasks (without direnv)
   command: >
     bundle exec {{ deploy_rake_tasks_command }} {{ item }}
     chdir={{ deploy_release_dir }}
-  with_items: deploy_rake_tasks
+  with_items: "{{ deploy_rake_tasks }}"
   when: deploy_with_environment is not defined
