--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,14 +1,16 @@
 ---
 - name: performing rake tasks (with direnv)
-  command: >
-    direnv exec . bundle exec {{ deploy_rake_tasks_command }} {{ item }}
-    chdir={{ deploy_release_dir }}
+  run_once: "{{ deploy_rake_tasks_run_once }}"
+  command: "direnv exec . bundle exec {{ deploy_rake_tasks_command }} {{ item }}"
+  args:
+    chdir: "{{ deploy_release_dir }}"
   with_items: "{{ deploy_rake_tasks }}"
   when: deploy_with_environment is defined
 
 - name: performing rake tasks (without direnv)
-  command: >
-    bundle exec {{ deploy_rake_tasks_command }} {{ item }}
-    chdir={{ deploy_release_dir }}
+  run_once: "{{ deploy_rake_tasks_run_once }}"
+  command: "bundle exec {{ deploy_rake_tasks_command }} {{ item }}"
+  args:
+    chdir: "{{ deploy_release_dir }}"
   with_items: "{{ deploy_rake_tasks }}"
   when: deploy_with_environment is not defined
